syntax = "proto3";

package integrations;

option go_package = "github.com/joseluis8906/project-layout/pkg/pb";

message V1 {
    message Tested {
        string id = 1;
        int64 occurred_on = 2;
        string msg = 3;
    }
}
